# topo-processor

./: .dockerignore  .env  .eslintrc.cjs  .gitignore  CHANGELOG.md  Dockerfile  README.md  cdk.json  conftest.py  export  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  upload  validate
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.python.yml  build.ts.yml  ci.yml  codeql-analysis.yml
batch/: .pylintrc  upload
batch/src/infra/: index.ts  submit.ts
batch/test_data/schemas/: README.md
batch/topo_processor/cli/: upload.py  validate.py
batch/topo_processor/cog/: create_cog.py
batch/topo_processor/file_system/: get_fs.py  get_path_with_protocol.py  s3.py  transfer.py
batch/topo_processor/stac/: __init__.py  item.py  item_factory.py  store.py  validate_report.py
batch/topo_processor/util/: aws_credentials.py  files.py  tiff.py
infra/: cdk.json  tsconfig.json
infra/src/: batch-monitor.ts  batch.ts  index.ts  roles.ts  submit.ts
infra/src/lambda-code/: index.js
scripts/: version.bump.sh
src/: package.json
src/infra/: batch.ts  config.json  index.ts  submit.ts
test_data/: historical_aerial_photos_metadata.csv  historical_aerial_photos_metadata.gpkg  historical_aerial_photos_metadata_duplicate.gpkg  historical_aerial_photos_metadata_error.csv  historical_aerial_photos_metadata_error.gpkg  historical_survey_footprint_metadata.csv  historical_survey_footprint_metadata.gpkg  manifest.json  manifest_duplicate.json
test_data/schemas/: README.md  aerial-photo-schema.json  camera-schema.json  film-schema.json  hi-schema.json  linz-schema.json  readme.txt  scanning-schema.json
test_data/tiffs/: CROWN_399_E_48.tiff  CROWN_399_E_49.tiff
test_data/tiffs/399/: CROWN_398_E_48.tiff  CROWN_399_E_51.tiff
test_data/tiffs/C8054/: CROWN_C8054_A_2.tif
topo_processor/: test.py
topo_processor/aws/: aws_credentials.py  aws_files.py  s3.py
topo_processor/bowler/: add_return_type_for_tests.py
topo_processor/cli/: export.py  main.py  main_test.py  transfer_collection.py  upload.py  validate.py
topo_processor/cli/geostore/: add.py  delete.py  export.py  list.py  status.py
topo_processor/cli/tests/: main_test.py  upload_test.py
topo_processor/cog/: __init__.py  command.py  command_test.py  create_cog.py  create_cog_test.py  execution.py
topo_processor/cog/tests/: command_test.py  create_cog_test.py
topo_processor/data/data_transformers/: __init__.py  data_transformer.py  data_transformer_imagery_historic.py  data_transformer_repo.py
topo_processor/factory/: collection_factory.py  item.py  item_test.py
topo_processor/file_system/: __init__.py  assets.py  blah.py  file_searcher.py  file_system.py  file_system_local.py  file_system_s3.py  fs.py  get_fs.py  get_path_with_protocol.py  join_overlapping_paths.py  manifest.py  manifest_file.py  transfer.py  write_json.py
topo_processor/file_system/tests/: assets_test.py  file_searcher_test.py  get_fs_test.py  get_path_with_protocol_test.py  join_overlapping_paths_test.py  (+2 more)
topo_processor/geostore/: environment.py  invoke.py
topo_processor/metadata/: collection.py  collection_factory.py  data_type.py  item.py  item_test.py
topo_processor/stac/: __init__.py  asset.py  asset_key.py  collection.py  collection_factory.py  collection_store.py  data_type.py  file_extension.py  item.py  item_factory.py  iter_errors_validator.py  lds_cache.py  linz_provider.py  linz_providers.py  providers.py  stac_extensions.py  store.py  validate_report.py  validation.py
topo_processor/subprocess/: subprocess.py  subprocess_test.py
topo_processor/uploader/: __init__.py  local.py  s3.py
topo_processor/util/: __init__.py  aws_credentials.py  aws_files.py  checksum.py  checksum_test.py  command.py  configuration.py  conversions.py  epsg.py  epsg_test.py  file_converter.py  file_dates.py  file_extension.py  files.py  format_stac.py  gzip.py  json_writer.py  s3.py  time.py  transfer_collection.py  valid.py
(+79 files in other folders)
