[tool.poetry]
name = "topo-processor"
version = "0.1.0"
description = ""
authors = ["Blayne Chard <bchard@linz.govt.nz>", "Paul Fouquet <pfouquet@linz.govt.nz>", "Megan Davidson <mdavidson@linz.govt.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
linz-logger= "^0.5.0"
pystac= "^0.5.6"
py-multihash = "^2.0.1"
rasterio = "^1.2.6"
click = "^8.0.1"
boto3 = "^1.18.24"
aiofiles = "^0.7.0"
python-ulid = "^1.0.2"
fsspec = {extras = ["s3"], version = "^2021.6.1"}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
pylint = "^2.9.3"
pytest = "^6.2.4"
rope = "^0.19.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
case_sensitive = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
